--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build --configuration=production --aot --output-hashing=all",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "storybook": "ng run frontend:storybook",
